--- a/frontPetLove-master/styles/User.module.css
+++ b/frontPetLove-master/styles/User.module.css
@@ -6,6 +6,20 @@
     width: 100%;
     height: 200px;
 }
+#corpo{
+    background-color: #DDD;
+}
+#h1{
+    padding: 0;
+    margin: 0;
+}
+
+.h2 {
+    background-color: #3F213B;
+    color: aliceblue;
+    padding: 0;
+    margin: 0;
+}
 .text {
     font-size: 0.8em;
     font-weight: bolder;
