--- a/frontPetLove-master/styles/Pet.module.css
+++ b/frontPetLove-master/styles/Pet.module.css
@@ -1,24 +1,14 @@
 
 .borda{
-    /* border: solid black 1.5px; */
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 200px;
+    border: solid black 1.5px;    
 }
-#teste{
-    border: solid red 2px;
-}
-
 #corpo{
     background-color: #DDD;
+    width: 100%;
 }
 #h1{
     padding: 0;
     margin: 0;
-}
-#pad{
-    border-bottom: 20px;
 }
 
 .h2 {
@@ -27,20 +17,12 @@
     padding: 0;
     margin: 0;
 }
-#radio{
-    font-size: 1.5em;
-    padding-left: 500px;
-    justify-content: center;
-    align-items: center;
-}
-
 .text {
     font-size: 0.8em;
     font-weight: bolder;
     padding: 20px 0;
     color: indigo;
 }
-
 .alinhar{
     display: flex;
     justify-content: right; 
@@ -49,14 +31,6 @@
 
 .card {
     background-color: #DDD;
-}
-
-.imgCadastro {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    height: 250px;
-    margin: 30px 0;
 }
 
 .btregistrar {
