--- a/frontPetLove-master/styles/User.module.css
+++ b/frontPetLove-master/styles/User.module.css
@@ -7,7 +7,7 @@
     height: 200px;
 }
 #teste{
-    border: solid red 2px;
+    border-left: 30px;
 }
 
 #corpo{
@@ -16,20 +16,24 @@
 #h1{
     padding: 0;
     margin: 0;
+    background-color: #3F213B;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
 }
 #pad{
     border-bottom: 20px;
 }
 
 .h2 {
-    background-color: #3F213B;
+    
     color: aliceblue;
     padding: 0;
     margin: 0;
 }
 #radio{
     font-size: 1.5em;
-    padding-left: 500px;
+    padding-left: 450px;
     justify-content: center;
     align-items: center;
 }
@@ -57,6 +61,14 @@
     width: 100%;
     height: 250px;
     margin: 30px 0;
+}
+.btregistrar:hover{
+    width: 180px;
+    height: 35px;
+    border: solid #3F213B 0 2.5px 2.5px 0;
+    height: 100%;
+    font-family: cursive; 
+    font-size: 1.2em;
 }
 
 .btregistrar {
