--- a/frontPetLove-master/styles/globals.css
+++ b/frontPetLove-master/styles/globals.css
@@ -9,7 +9,6 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
 * {
   box-sizing: border-box;
 }
@@ -17,21 +16,18 @@ a {
   text-align: right;
 }
 .toptexto{
-  font-size: 3em;
+  font-size: 2.5em;
   margin-top: 80px;
   color: #3F213B;    
 }
-
 .topnav{
     margin-top: 50px;
     color: #9F213B;    
 }
-
 .trespacamento{
   margin-bottom: 20px;
   padding-bottom: 20px;
 }
-
 .distanciatexto{
   margin-top: 30px;  
 }
@@ -59,20 +55,43 @@ a {
   -webkit-border-radius: 0 0  5px 5px;
   border-radius: 0 0  5px 5px;
 }
-
+.btentrar:hover{
+  width: 180px;
+  height: 35px;
+  background: #361832 !important;
+  font-family: cursive; 
+  font-size: 1.2em;
+}
 .btentrar {
   width: 170px;
   background: #3F213B !important;
   font-family: cursive;
+}
+.btregistrar:hover{
+  width: 180px;
+  height: 35px;
+  background: #DF6E2F !important;
+  font-family: cursive; 
+  font-size: 1.2em;
 }
 .btregistrar {
   width: 170px;
   background: #DF6E2F !important;
   font-family: cursive;
 }
-
+.navmark{
+  padding: 0;
+  border: 0;
+}
+.navmark:hover{
+  font-size: 1.2em;
+}
 .nav{
   color: black !important;
+  padding-right: 2rem !important ;
+  font-family: cursive;
+}
+.nav:hover{  
   padding-right: 2rem !important ;
   font-family: cursive;
 }
@@ -111,9 +130,6 @@ tr, td, th {border-radius: 12px; background-color: #3F213B; color: aliceblue;  b
 table{border: solid 10px; }
 
 .tablespace {padding-top: 15px;}
-
-
-
 .banner{
   background-image: url("/banner2.png")  ;
   background-repeat: no-repeat;
@@ -168,6 +184,15 @@ table{border: solid 10px; }
   margin-left: 50px;
   font-family: cursive;
 }
+.btvejamais:hover{
+  margin-left: 50px ;
+  margin-top: 50px;
+  width: 190px;
+  height: 50px;
+  background: #DF6E2F !important;
+  font-family: cursive;
+  font-size: 1.5em;
+}
 .btvejamais {
   margin-left: 50px ;
   margin-top: 50px;
@@ -183,17 +208,30 @@ table{border: solid 10px; }
 .btcoracao {
   background-image: url("/coracao.png")  ;
   background-repeat: no-repeat;
-  height:  290px !important;
+  height:  320px !important;
   background-color: white !important;
   border: none !important;
-  font-size:0;
-  
+  font-size:0;  
 }
-
+.btcoracao:hover{
+  background-image: url("/coracao.png")  ;
+  background-repeat: no-repeat;
+  width: 250px;
+  background-color: white !important;
+  border: none !important;
+  font-size:2em;
+}
+.btpegada:hover{
+  background-image: url("/peg.png")  ;
+  background-repeat: no-repeat;
+  width: 300px !important;
+  border: none !important;
+  font-size: 2em;
+}
 .btpegada{
   background-image: url("/peg.png")  ;
   background-repeat: no-repeat;
-  width: 290px !important;
+  width: 290px ;
   background-color: white !important;
   border: none !important;
   font-size:0;
@@ -203,9 +241,12 @@ table{border: solid 10px; }
 .textado{
   margin-top: 130px;
 }
-
+.paddingbotton{
+  margin-top: 70px;
+  margin-bottom: 50px;  
+}
 .topoq {
-  margin-top: 95px;
+  margin-top: 70px;
 }
 
 .optext {
