--- a/frontPetLove-master/styles/Contato.module.css
+++ b/frontPetLove-master/styles/Contato.module.css
@@ -1,61 +1,69 @@
 
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
-* {
+/* * {
   box-sizing: border-box;
-}
-body {
+} */
+.body {
   margin: 0;
   padding: 0;
-  background-color: #c8e7d8;
-  color: #4e5e72;
+  background-color: #4e5e72;
   text-align: center;
   font-family: monospace;
   overflow: hidden;
 }
-h1, p {
-  margin: 0;
-  padding: 0;
-}
-h1 {
+.h1 {
   font-size: 2rem;
-  font-family: 'Dancing Script';
+  font-family: cursive; 
+  background-color: #3F213B;
+  color: white;
+  border-radius: 15px;
+  text-align: center;
 }
-small {
+.small {
   display: block;
   padding: 1rem 0;
   font-size: 0.8rem;
   transition: opacity 0.33s;
 }
-textarea, input, button {
+.input {
+  line-height: 1.5rem;
+  padding-bottom: 10px;
+  border: none;
+  outline: none;
+  font-family: inherit;
+  appearance: none;
+  color: #4e5e72;
+  background-color: transparent;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='24'><rect fill='rgb(229, 225, 187)' x='0' y='23' width='10' height='1'/></svg>");
+}
+.textarea {
   line-height: 1.5rem;
   border: 0;
   outline: none;
   font-family: inherit;
   appearance: none;
-}
-textarea, input {
+  width: 100%;
+  height: 8rem;
+  resize: none;
   color: #4e5e72;
   background-color: transparent;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='24'><rect fill='rgb(229, 225, 187)' x='0' y='23' width='10' height='1'/></svg>");
 }
-textarea {
- width: 100%;
- height: 8rem;
- resize: none;
-}
-
-button {
+.button {
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
- background-color: rgba(78, 94, 114, 0.9);
+ height: 40px;
+ width: 170px;
+ background: #DF6E2F !important;
+ font-family: cursive;  
  color: white;
  font-size: 1rem;
- transition: background-color 0.2s;
-  
+ transition: background-color 0.2s; 
+ justify-items: auto; 
 }
-input[type=text]:focus,
-input[type=email]:focus,
-textarea:focus {
+.input[type=text]:focus,
+.input[type=email]:focus,
+.textarea:focus {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='24'><rect fill='rgba(78, 94, 114, 0.3)' x='0' y='23' width='10' height='1'/></svg>");
   outline: none;
 }
@@ -64,7 +72,7 @@ textarea:focus {
   background-color: white;
 }
 .letter {
-  position: absolute;
+  /* position: absolute; */
   left: 0;
   right: 0;
   top: 0;
@@ -75,10 +83,8 @@ textarea:focus {
 .side {
   height: 12rem;
   background-color: #fcfcf8;
-  outline: 1px solid transparent;
-  
-  }
- 
+  outline: 1px solid transparent;  
+  } 
 
 .envelope {
   position: absolute;
