--- a/frontPetLove-master/styles/globals.css
+++ b/frontPetLove-master/styles/globals.css
@@ -12,6 +12,30 @@ a {
 * {
   box-sizing: border-box;
 }
+.header{
+  padding: 0;
+    margin: 0;
+    background-color: #3F213B !important;
+    color: white;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+}
+.mark{
+  font-size: 1em;
+  background-color: #361832 !important;
+  border-radius: 10px;
+  color :white;
+}
+.mark:hover{
+  color :white;
+  font-size: 1.1em;  
+}
+.borderteste{
+  /* border: solid #9F213B 2px; */
+  padding-left: 120px;
+  padding-top: 0;
+}
 .fonte{
   text-align: right;
 }
@@ -46,7 +70,7 @@ a {
 
 .link{ 
   background: #e1eaeb;
-  color: #7f7c7c;
+  color: black;
   left: 0px;
   height: 20px;
   width: 440px;  
